# gmsh_scripts

./: .gitignore  README.md  block.py  boolean.py  borehole.py  complex.py  complex_environment.py  complex_factory.py  complex_primitive.py  complex_type_1  complex_type_2  complex_type_2.json  complex_union.py  coordinate_system.py  curve.py  curve_loop.py  cylinder.py  divided_cylinder.py  environment.py  experiment.py  factory.py  import_divide  import_text.py  input_borehole_1.json  input_borehole_2.json  input_borehole_4_2.json  input_divided_cylinder_borehole_2.json  input_divided_cylinder_borehole_3.json  input_divided_cylinder_borehole_3_2.json  input_environment.json  input_intrusion.json  input_intrusion_2.json  input_multi.json  input_multi_nkm.json  input_multi_nkm_2_ints.json  input_nkm.json  input_nkm_2_ints.json  input_nkm_base.json  input_nkm_base_ext_hlw_1.5.json  input_nkm_environment.json  (+114 more)
connection/: micromine.py  various.py
cylinder/: hex_prism_cylinder.py  hex_pyramid_tet_cylinder.py  prism_cylinder.py  tet_cylinder.py
docs/: requirements.txt
geo/: macro_borehole1occ.geo  macro_borehole2.geo  macro_cylinder.geo  macro_cylinder2.geo  macro_cylshell.geo  macro_hemisphere.geo  macro_hexahedron.geo  macro_matrix.geo  macro_nk_container.geo  macro_pmap.geo  macro_pmapi.geo  macro_primitive.geo  macro_primitive_old.geo  macro_sphere.geo  macro_sphereshell.geo  nk_462b1occ_sill.geo  test_borehole1.geo  test_cylitive.geo  test_map.geo  test_matrix.geo  test_primitive.geo  test_primitive_t_7s.geo  test_sphere.geo
gmsh_scripts/: factory.py  load.py  plot.py  run.py
input/: complex_factory_nkm_eleron_trench.json  (+415 more)
old/: experiment.py  (+7 more)
(+707 files in other folders)
