[metadata]
name = gmsh-scripts
version = 0.2.1
author = Roman Butov
author_email = romanbutov637@gmail.com
description = Scripts for GMSH mesh generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romanzes637/gmsh_scripts
project_urls =
    Bug Tracker =https://github.com/romanzes637/gmsh_scripts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    gmsh
    numpy
    pyvis
    pyyaml

[options.packages.find]
where = .
